# DeepSEA-SHARCQ

./: .gitmodules  Dockerfile_ai  environment.yml  pyproject.toml
docs/: README.md  development.md
src/: main.py
src/adapters/: NBB_adapter.py
src/ai/: Dockerfile_ai
src/ai/deepseasharcq/: __main__.py
src/ai/deepseasharcq/adapters/: NBB_adapter.py
src/ai/deepseasharcq/imageRegestration/transforms/: transformAbstract.py
src/ai/deepseasharcq/models/: Image.py  point.py
src/ai/tests/: test_main.py
src/api/: Dockerfile  Dockerfile_api  main.py  pyproject.toml
src/api/deepsea_sharcq_api/: main.py
src/api/deepseasharcqapi/: __main__.py  aws_util.py  main.py  main_api.py
src/api/tests/: test___main__.py
src/deepseasharcq/: __main__.py
src/deepseasharcq/imageRegestration/mappings/: NBB.py
src/deepseasharcq/imageRegestration/transforms/: nonLinearTriangle.py
src/deepseasharcq/models/: points.py
src/imageRegestration/mappings/: NBB.py  mappingAbstract.py
src/imageRegestration/transforms/: nonLinearTriangle.py
src/main/: main.py
src/models/: points.py
