[tool.poetry]
name = "deepseasharcqapi"
version = "0.1.0"
description = "fast api for deepsea-sharq ai solution"
authors = ["Duncan Haywood"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
python-multipart = "^0.0.5"
boto3 = "^1.24.20"
mangum = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
